# ctrl-memory-system

./: .gitignore  AUDIT.md  README.md  install.sh  mcp_server.py  memory_backend.py  pyproject.toml
benchmarks/: adapter.py
ctrl_memory/: __init__.py  __main__.py  backend.py  server.py
hermes_provider/: __init__.py  plugin.yaml
tests/: test_embeddings.py  test_hermes_provider.py  test_mcp_server.py  test_memory_backend.py  test_sqlite_store.py
